# Trading-Edge-App

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/tea-backfill-pattern/: SKILL.md
.claude/skills/tea-forensics/: SKILL.md
.claude/skills/tea-promotion-gate/: SKILL.md
.github/workflows/: lint.yml  security.yml  tests.yml
Docs/: Design.md  runbook.md
Docs/decisions/: 0001-no-caddy-reuse-traefik.md  0002-hypertable-pk-ts.md  0003-trading-schema-extensions.md  0004-polymarket-venue-mock.md  0005-backtest-ignores-kill-switch.md  0006-phase-2-nautilus-scope.md  0007-nautilus-capabilities-gap.md  0008-multi-strategy-paper-engine.md  0009-dashboard-and-prometheus.md  0010-llm-copilot-openrouter.md  0011-last-90s-forecaster.md  0012-contest-ab.md  0013-oracle-lag-roadmap.md  0014-oracle-lag-v2-maker-first.md  0015-erratum-maker-rebates.md
config/environments/: staging.toml
config/strategies/: contest_avengers_v1.toml  contest_ensemble_v1.toml  pbt5m_bb_residual_ofi_v1.toml  pbt5m_imbalance_v3.toml  pbt5m_last_90s_forecaster_v1.toml  pbt5m_last_90s_forecaster_v2.toml  pbt5m_last_90s_forecaster_v3.toml  pbt5m_oracle_lag_v1.toml  pbt5m_oracle_lag_v1_a2b1eval.toml  pbt5m_oracle_lag_v1_a2eval.toml  pbt5m_oracle_lag_v1_phase1.toml  pbt5m_oracle_lag_v1_phase15.toml  pbt5m_oracle_lag_v2.toml  pbt5m_trend_confirm_t1_v1.toml  polymarket_btc15m_mm_rebate_v1.toml  polymarket_btc5m_mm_rebate_v1.toml  polymarket_eth15m_mm_rebate_v1.toml  polymarket_eth5m_mm_rebate_v1.toml
estrategias/: BITACORA.md  INDICE.md  README.md
estrategias/descartadas/: _audit_polybot_groundtruth.md  _forensics_trend_confirm_t1_v1.md  bb_residual_ofi_v1.md  last_90s_forecaster_v2_bbres.md  oracle_lag_v2.md
estrategias/en-desarrollo/: bb_residual_ofi_v1.md  cvd_confirm_t2_v0.md  last_90s_forecaster_v3.md  mm_rebate_v1.md  oracle_lag_v1.md  oracle_lag_v2.md
estrategias/plantillas/: estrategia.md  resultado.md
estrategias/resultados/: _last_run_status.md
infra/api/: Dockerfile
infra/engine/: Dockerfile
infra/ingestor/: Dockerfile
infra/postgres/: Dockerfile
infra/prometheus/: prometheus.yml
infra/scripts/: backup_db.sh  restore_db.sh
infra/telegram_bot/: Dockerfile
scripts/: analyze_gate_firings.py  audit_polybot_groundtruth.py  backfill_binance_aggtrades.py  backfill_btc15m_initial.py  backfill_coinalyze.py  backfill_paper_settles.py  backfill_polymarket_initial.py  backfill_polymarket_prices_history.py  check_staging_health.sh  compare_to_fail.py  dashboard_bb_ofi.py  diff_parity.py  export_result_md.py  forensics_trend_fail.py  grid_search_v1_divisor.py  logrotate.tea-vps-daily  parity_probe.py  parity_probe_trend.py  parity_probe_trend_bt.py  trace_backtest_single.py  trace_market.py  v3_feature_importance.py  vps_daily.backtests  vps_daily.sh  walk_forward_oracle_lag.sh  watch_bb_ofi.py
src/trading/api/: auth.py  db.py  (+4 more)
tests/: conftest.py
(+282 files in other folders)
