[project]
name = "trading-edge-app"
version = "0.0.1"
description = "Multi-broker trading system on NautilusTrader"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
    "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: hits real external APIs; skipped in CI by default",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
